# CNN

./: .gitignore  Makefile  README.md  pyproject.toml
.github/workflows/: ci.yaml
config/: pinpad_categorical_ae.yaml  pinpad_vae.yaml  pinpad_vae_lightweight.yaml  two_buttons_vqvae.yaml  vae_pinpad_heavy.yaml
scripts/: cli.py  download.py  train.py
src/cnn/: __init__.py  callback.py  callbacks.py  config.py  custom_types.py  datamodule.py  dataset.py  decoder.py  encoder.py  loss.py  module.py  network.py  resnet.py  utils.py  visualize.py
tests/: conftest.py  test__utils.py
