[project]
name = "cnn"
version = "1.0.2"
description = "CNN"
dependencies = [
    "einops>=0.7.0",
    "wandb>=0.16.1",
    "distribution-extension @ git+https://github.com/nomutin/distribution-extension.git",
]
readme = "README.md"
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = [
    "torch>=2.3.0",
    "torchvision>=0.18.0",
    "rich>=13.7.0",
    "gdown>=4.7.1",
    "matplotlib>=3.7.4",
    "pytest-cov>=4.1.0",
    "mypy>=1.7.1",
    "hydra-core>=1.3.2",
    "torch>=2.3.0",
    "torchvision>=0.18.0",
    "lightning>=2.2.4",
    "ruff>=0.4.4",
]

[tool.hatch.metadata]
allow-direct-references = true

[tool.pytest.ini_options]
filterwarnings = [
    "ignore::UserWarning",
    "ignore::DeprecationWarning",
]

[tool.mypy]
python_version = 3.8
ignore_missing_imports = true

[tool.ruff]
line-length = 79
target-version = "py38"

[tool.ruff.lint]
preview = true
select = ["ALL"]
ignore = [
    "CPY001",  # missing-copyright-notice
    "ISC001",  # single-line-implicit-string-concatenation
    "COM812",  # missing-comma-in-multiline
    "PLR0913", # too-many-arguments
    "PLR0917", # too-many-positional-arguments
    "S101",    # assert
]
fixable = ["ALL"]
unfixable = []
exclude = [".git", ".ruff_cache", ".venv",]
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"

[tool.ruff.format]
preview = true

[tool.ruff.lint.isort]
known-first-party = ["rssm"]

[tool.ruff.lint.pydocstyle]
convention = "numpy"