[project]
name = "cnn"
version = "2.0.1"
description = "CNN"
dependencies = [
    "einops>=0.7.0",
    "torch>=2.3.0",
    "timm>=1.0.3",
    "torchgeometry>=0.1.2",
]
readme = "README.md"
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = [
    "pytest-cov>=4.1.0",
    "mypy>=1.7.1",
    "ruff>=0.4.4",
]

[tool.hatch.metadata]
allow-direct-references = true

[tool.pytest.ini_options]
filterwarnings = [
    "ignore::UserWarning",
    "ignore::DeprecationWarning",
]

[tool.rye.scripts]
cov = "pytest -ra --cov=src --cov-report=term --cov-report=xml"

[tool.mypy]
python_version = 3.8
ignore_missing_imports = true

[tool.ruff]
line-length = 79
target-version = "py38"

[tool.ruff.lint]
preview = true
select = ["ALL"]
ignore = [
    "CPY001",  # missing-copyright-notice
    "ISC001",  # single-line-implicit-string-concatenation
    "COM812",  # missing-comma-in-multiline
    "S101",    # assert
]
fixable = ["ALL"]
unfixable = []
exclude = [".git", ".ruff_cache", ".venv",]
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"

[tool.ruff.format]
preview = true

[tool.ruff.lint.isort]
known-first-party = ["cnn"]

[tool.ruff.lint.pydocstyle]
convention = "numpy"
