[project]
name = "cnn"
version = "3.0.3"
description = "CNN"
dependencies = [
    "einops>=0.7.0",
    "torch>=2.3.0",
    "torchgeometry>=0.1.2",
    "vector-quantize-pytorch>=1.14.8",
    "lightning>=2.3.3",
    "gdown>=5.2.0",
    "wandb>=0.17.5",
]
readme = "README.md"
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = [
    "mypy>=1.7.1",
    "torchvision>=0.19.0",
    "jsonargparse[signatures]>=4.32.0",
    "ruff>=0.5.5",
]

[tool.hatch.metadata]
allow-direct-references = true

[tool.mypy]
python_version = "3.10"
ignore_missing_imports = true

[tool.ruff]
line-length = 120
target-version = "py310"

[tool.ruff.lint]
preview = true
select = ["ALL"]
ignore = ["CPY001"]
fixable = ["ALL"]
unfixable = []
exclude = [".git", ".ruff_cache", ".venv",]
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"

[tool.ruff.format]
preview = true

[tool.ruff.lint.isort]
known-first-party = ["cnn"]

[tool.ruff.lint.pydocstyle]
convention = "numpy"
